  results to lookup tables.
  (Stephen Dolan, review by Gabriel Scherer, Pierre Chambart,
  Mark Shinwell, and bug report by Gabriel Scherer)

- GPR#1150: Fix typo in arm64 assembler directives
  (KC Sivaramakrishnan)

- PR#7533, GPR#1173: Correctly perform side effects for certain
  cases of "/" and "mod"
  (Mark Shinwell, report by Jan Mitgaard)

### Runtime system:

- MPR#385, GPR#953: Add caml_startup_exn
  (Mark Shinwell)

- PR#7423, GPR#946: expose new exception-raising functions
  `void caml_{failwith,invalid_argument}_value(value msg)`
  in addition to
  `void caml_{failwith,invalid_argument}(char const *msg)`.
  The previous functions would not free their message argument, so
  were inconvient for dynamically-allocated messages; the messages
  passed to the new functions are handled by the garbage collector.
  (Gabriel Scherer, review by Mark Shinwell, request by Immanuel Litzroth)

- GPR#795: remove 256-character limitation on Sys.executable_name
  (Xavier Leroy)

- GPR#891: Use -fno-builtin-memcmp when building runtime with gcc.
  (Leo White)

### Type system:

- PR#6608, GPR#901: unify record types when overriding all fields
  (Tadeu Zagallo and Gabriel Scherer, report by Jeremy Yallop,
  review by David Allsopp, Jacques Garrigue)

* PR#7414, GPR#929: Soundness bug with non-generalized type variables and functors.
  (Jacques Garrigue, report by Leo White)

### Compiler user-interface and warnings:

- PR#7050, GPR#748 GPR#843 GPR#864: new `-args/-args0 <file>` parameters to
  provide extra command-line arguments in a file -- see documentation.
  User programs may implement similar options using the new `Expand`
  constructor of the `Arg` module.
  (Bernhard Schommer, review by Jérémie Dimino, Gabriel Scherer
   and Damien Doligez, discussion with Alain Frisch and Xavier Leroy,
   feature request from the Coq team)

- PR#7137, GPR#960: "-open" command line flag now accepts a module path
  (not a module name) (Arseniy Alekseyev and Leo White)
